# musicians_canvas

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FILE_ID_Template.DIZ  Localized_Screenshots.md  Makefile  README.md  README_cy.md  README_da.md  README_de.md  README_el.md  README_es.md  README_fi.md  README_fr.md  README_ga.md  README_ja.md  README_nb.md  README_pl.md  README_pt-BR.md  README_ru.md  README_sv.md  README_zh-CN.md  README_zh-TW.md  VST_Update.md  copyRequiredWinDLLs.bat  makeDiz.sh
.github/workflows/: ci.yml
docs/: MusiciansCanvas_User_Manual.md  MusiciansCanvas_User_Manual_cy.md  MusiciansCanvas_User_Manual_da.md  MusiciansCanvas_User_Manual_de.md  MusiciansCanvas_User_Manual_el.md  MusiciansCanvas_User_Manual_es.md  MusiciansCanvas_User_Manual_fi.md  MusiciansCanvas_User_Manual_fr.md  MusiciansCanvas_User_Manual_ga.md  MusiciansCanvas_User_Manual_ja.md  MusiciansCanvas_User_Manual_nb.md  MusiciansCanvas_User_Manual_pirate.md  MusiciansCanvas_User_Manual_pl.md  MusiciansCanvas_User_Manual_pt-BR.md  MusiciansCanvas_User_Manual_ru.md  MusiciansCanvas_User_Manual_sv.md  MusiciansCanvas_User_Manual_zh-CN.md  MusiciansCanvas_User_Manual_zh-TW.md  generate_docs.sh  generate_html.py
docs/html/: MusiciansCanvas_User_Manual.html  MusiciansCanvas_User_Manual_cy.html  MusiciansCanvas_User_Manual_da.html  MusiciansCanvas_User_Manual_de.html  MusiciansCanvas_User_Manual_el.html  MusiciansCanvas_User_Manual_es.html  MusiciansCanvas_User_Manual_fi.html  MusiciansCanvas_User_Manual_fr.html  MusiciansCanvas_User_Manual_ga.html  MusiciansCanvas_User_Manual_ja.html  MusiciansCanvas_User_Manual_nb.html  MusiciansCanvas_User_Manual_pirate.html  MusiciansCanvas_User_Manual_pl.html  MusiciansCanvas_User_Manual_pt-BR.html  MusiciansCanvas_User_Manual_ru.html  MusiciansCanvas_User_Manual_sv.html  MusiciansCanvas_User_Manual_zh-CN.html  MusiciansCanvas_User_Manual_zh-TW.html
scripts/: build_effect_tsv.py  effect_i18n.tsv  fill_effect_i18n.py  patch_mix_encoding_docs.py
src/: ampandcabinetmodelwidget.cpp  ampandcabinetmodelwidget.h  appicon.rc  appsettings.cpp  appsettings.h  audioformats.cpp  audioformats.h  audiopcmlimits.h  audiostartup.cpp  audiostartup.h  audioutils.cpp  audioutils.h  choruswidget.cpp  choruswidget.h  drumtrackgenerator.cpp  drumtrackgenerator.h  effectchaindragoverlay.cpp  effectchaindragoverlay.h  effectchaineditorwidget.cpp  effectchaineditorwidget.h  effectdsp.cpp  effectdsp.h  effectsdialog.cpp  effectsdialog.h  effectwidget.cpp  effectwidget.h  flangewidget.cpp  flangewidget.h  mainwindow.cpp  mainwindow.h  metronomedialog.cpp  metronomedialog.h  midifile.cpp  midifile.h  midiplayer.cpp  midiplayer.h  midirecorder.cpp  midirecorder.h  midirecordingmonitor.cpp  midirecordingmonitor.h  (+44 more)
src/virtual_midi_keyboard/: appicon.rc  virtual_midi_keyboard_main.cpp  vk_configdialog.cpp  vk_configdialog.h  vk_helpdialog.cpp  vk_helpdialog.h  vk_knob.cpp  vk_knob.h  vk_mainwindow.cpp  vk_mainwindow.h  vk_midiio.cpp  vk_midiio.h  vk_pianokeyboard.cpp  vk_pianokeyboard.h  vk_resources.qrc  vk_settings.cpp  vk_settings.h
tests/: musicians_canvas_tests.cpp
translations/: musicians_canvas_cy.qm  musicians_canvas_cy.ts  musicians_canvas_da.qm  musicians_canvas_da.ts  musicians_canvas_de.qm  musicians_canvas_de.ts  musicians_canvas_el.qm  musicians_canvas_el.ts  musicians_canvas_es.qm  musicians_canvas_es.ts  musicians_canvas_fi.qm  musicians_canvas_fi.ts  musicians_canvas_fr.qm  musicians_canvas_fr.ts  musicians_canvas_ga.qm  musicians_canvas_ga.ts  musicians_canvas_ja.qm  musicians_canvas_ja.ts  musicians_canvas_nb.qm  musicians_canvas_nb.ts  musicians_canvas_pirate.qm  musicians_canvas_pirate.ts  musicians_canvas_pl.qm  musicians_canvas_pl.ts  musicians_canvas_pt_BR.qm  musicians_canvas_pt_BR.ts  musicians_canvas_ru.qm  musicians_canvas_ru.ts  musicians_canvas_sv.qm  musicians_canvas_sv.ts  musicians_canvas_zh_CN.qm  musicians_canvas_zh_CN.ts  musicians_canvas_zh_TW.qm  musicians_canvas_zh_TW.ts  virtual_midi_keyboard_cy.ts  virtual_midi_keyboard_da.ts  virtual_midi_keyboard_de.ts  virtual_midi_keyboard_el.ts  virtual_midi_keyboard_es.ts  virtual_midi_keyboard_fi.ts  (+11 more)
vs/: Common.props  musicians_canvas.sln
vs/musicians_canvas/: musicians_canvas.vcxproj  musicians_canvas.vcxproj.filters
vs/virtual_midi_keyboard/: virtual_midi_keyboard.vcxproj  virtual_midi_keyboard.vcxproj.filters
windows_installer/: README.md  musicians_canvas.iss  musicians_canvas.wxs
